# ai-ml-deepdive

./: .gitignore  GeminiChecklist.md  Makefile  PLAN.md  README.md  Table.md  docker-compose.yml  pyproject.toml
.github/workflows/: notify_friend.yml
01_foundations/01_autograd/micrograd/: MyNotebook1.ipynb  Untitled.ipynb  demo.ipynb  gout  trace_graph.ipynb
01_foundations/01_autograd/micrograd/micrograd/: engine.py  myNode.py
01_foundations/01_autograd/micrograd/micrograd.egg-info/: SOURCES.txt
01_foundations/01_autograd/micrograd/test/: test_engine.py
01_foundations/02_transformer/HowLLMsWork/: L2.ipynb  L6.ipynb
03_capstone_wiki_engine/: Dockerfile
Misc/chat_gpt/: README.md
Misc/chat_gpt/week1_nn_from_scratch/: README.md
Misc/chat_gpt/week2_transform/: README.md
ai_capstone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: MyNotes.md  Plan.md
week3_gpt/: README.md
week4_rag/: README.md
week5_agents/: README.md
